# uninstall-dot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  uninstall_dot.py
.github/workflows/: main.yml
src/uninstall_dot/: _main.py
tests/: test_main.py
