[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uninstall-dot"
version = "1.0.0"
authors = [
    { name="Taben Malik", email="tabenjmalik@gmail.com" },
]
description = "Uninstall ."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "tomli; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/tabenmalik/uninstall-dot"
Issues = "https://github.com/tabenmalik/uninstall-dot/issues"

[project.scripts]
uninstall-dot = "uninstall_dot:_main"

[tool.setuptools]
py-modules = ["uninstall_dot"]

[tool.coverage]
paths.source = [
    ".",
    ".tox*/*/lib/python*/site-packages",
    ".tox*/pypy*/site-packages",
    ".tox*\\*\\Lib\\site-packages",
    "*/src",
    "*\\src",
]

[tool.coverage.run]
relative_files = true
plugins = ["covdefaults"]

[tool.tox]
env_list = ["3.11", "3.12", "3.13", "3.14", "coverage"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest", "coverage[toml]", "covdefaults"]
set_env = { COVERAGE_FILE = "{env:COVERAGE_FILE:{work_dir}{/}.coverage.{env_name}}" }
commands = [
    ["coverage", "erase"],
    ["coverage", "run", "--module", "pytest", {replace="posargs", extend=true}],
]

[tool.tox.env.coverage]
description = "Compile and report coverage"
deps = ["coverage[toml]", "covdefaults"]
depends = ["3.11", "3.12", "3.13", "3.14"]
skip_intsall = true
set_env = { COVERAGE_FILE = "{env:COVERAGE_FILE:{work_dir}{/}.coverage}" }
commands = [
    ["coverage", "erase"],
    ["coverage", "combine", "--keep"],
    ["coverage", "report"],
]
