[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "uninstall-dot"
version = "1.0.0"
description = "Uninstall ."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Taben Malik", email = "tabenjmalik@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "tomli; python_version<'3.11'",
]
urls.Homepage = "https://github.com/tabenmalik/uninstall-dot"
urls.Issues = "https://github.com/tabenmalik/uninstall-dot/issues"
scripts.uninstall-dot = "uninstall_dot:_main"

[tool.setuptools]
py-modules = [ "uninstall_dot" ]

[tool.coverage]
run.plugins = [ "covdefaults" ]
run.relative_files = true
paths.source = [
  ".",
  ".tox*/*/lib/python*/site-packages",
  ".tox*/pypy*/site-packages",
  ".tox*\\*\\Lib\\site-packages",
  "*/src",
  "*\\src",
]

[tool.tox]
env_list = [ "3.11", "3.12", "3.13", "3.14", "coverage" ]
env.coverage.description = "Compile and report coverage"
env.coverage.deps = [ "coverage[toml]", "covdefaults" ]
env.coverage.depends = [ "3.11", "3.12", "3.13", "3.14" ]
env.coverage.skip_intsall = true
env.coverage.set_env = { COVERAGE_FILE = "{env:COVERAGE_FILE:{work_dir}{/}.coverage}" }
env.coverage.commands = [
  [ "coverage", "erase" ],
  [ "coverage", "combine", "--keep" ],
  [ "coverage", "report" ],
]
env_run_base.description = "Run test under {base_python}"
env_run_base.deps = [ "pytest", "coverage[toml]", "covdefaults" ]
env_run_base.set_env = { COVERAGE_FILE = "{env:COVERAGE_FILE:{work_dir}{/}.coverage.{env_name}}" }
env_run_base.commands = [
  [ "coverage", "erase" ],
  [ "coverage", "run", "--module", "pytest", { replace = "posargs", extend = true } ],
]
